--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,3 @@
-VITE_BACKEND_URL=http://localhost:3001
-VITE_API_URL=${VITE_BACKEND_URL}/api
-VITE_FRONTEND_URL=http://localhost:5173
+VITE_BACKEND_URL=https://b2.onrender.com
+VITE_API_URL=https://b2.onrender.com/api
 GEMINI_API_KEY=PLACEHOLDER_API_KEY
